--- a/chart/bluecompute-customer-ce/templates/deployment.yaml
+++ b/chart/bluecompute-customer-ce/templates/deployment.yaml
@@ -16,6 +16,15 @@ spec:
         tier: backend
         micro: customer
         chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+      annotations:
+        pod.beta.kubernetes.io/init-containers: '[
+          {
+             "name": "bluecompute-customer-wait-for-couchdb",
+             "image": "ellerbrock/alpine-bash-curl-ssl",
+             "imagePullPolicy": "IfNotPresent",
+             "command": ["/bin/bash", "-c", "until curl --max-time 1 http://{{ .Values.couchdb.service.name }}:{{ .Values.couchdb.service.externalPort }}; do echo waiting for couchdb; /bin/sleep 1; done;"]
+          }
+        ]'
     spec:
       containers:
       - name: bluecompute-customer
@@ -32,12 +41,12 @@ spec:
           httpGet:
             path: /micro/check
             port: {{ .Values.service.internalPort }}
-          initialDelaySeconds: 60
+          initialDelaySeconds: 10
         readinessProbe:
           httpGet:
             path: /micro/check
             port: {{ .Values.service.internalPort }}
-          initialDelaySeconds: 60
+          initialDelaySeconds: 10
       volumes:
       - name: binding-refarch-cloudantdb
         secret:
