--- a/chart/bluecompute-customer-ce/charts/bluecompute-customer-couchdb/values.yaml
+++ b/chart/bluecompute-customer-ce/charts/bluecompute-customer-couchdb/values.yaml
@@ -16,3 +16,9 @@ couchdb:
     internalPort: 5984
   binding:
     name: binding-customer-couchdb
+  resources:
+    limits:
+      memory: 128Mi
+    requests:
+      memory: 64Mi
+
