--- a/chart/bluecompute-customer-ce/templates/deployment.yaml
+++ b/chart/bluecompute-customer-ce/templates/deployment.yaml
@@ -47,6 +47,8 @@ spec:
             path: /micro/check
             port: {{ .Values.service.internalPort }}
           initialDelaySeconds: 10
+        resources:
+{{ toYaml .Values.resources | indent 12 }}
       volumes:
       - name: binding-refarch-cloudantdb
         secret:
