--- a/chart/bluecompute-customer-ce/charts/bluecompute-customer-couchdb/templates/service.yaml
+++ b/chart/bluecompute-customer-ce/charts/bluecompute-customer-couchdb/templates/service.yaml
@@ -4,8 +4,10 @@ metadata:
   name: {{ .Values.couchdb.service.name }}
   labels:
     app: bluecompute
-    tier: data
     micro: customer
+    tier: data
+    heritage: {{.Release.Service | quote }}
+    release: {{.Release.Name | quote }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
   type: {{ .Values.couchdb.service.type }}
@@ -16,6 +18,8 @@ spec:
     name: {{ .Values.couchdb.service.name }}
   selector:
     app: bluecompute
-    tier: data
     micro: customer
+    tier: data
+    heritage: {{.Release.Service | quote }}
+    release: {{.Release.Name | quote }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
