--- a/chart/bluecompute-customer-ce/templates/post_a_cleanup_jobs.yaml
+++ b/chart/bluecompute-customer-ce/templates/post_a_cleanup_jobs.yaml
@@ -8,7 +8,7 @@ metadata:
     tier: backend
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
-    chart: "{{.Chart.Name}}-{{.Chart.Version}}"
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
   annotations:
     # This is what defines this resource as a hook. Without this line, the
     # job is considered part of the release.
@@ -19,12 +19,12 @@ spec:
     metadata:
       name: "{{.Chart.Name}}-cleanup-jobs-{{.Release.Name}}"
       labels:
-        heritage: {{.Release.Service | quote }}
-        release: {{.Release.Name | quote }}
-        chart: "{{.Chart.Name}}-{{.Chart.Version}}"
         app: bluecompute
         micro: customer
         tier: backend
+        heritage: {{.Release.Service | quote }}
+        release: {{.Release.Name | quote }}
+        chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     spec:
       restartPolicy: OnFailure
       containers:
