--- a/chart/bluecompute-customer/templates/pre_e_bind_cloudantdb.yaml
+++ b/chart/bluecompute-customer/templates/pre_e_bind_cloudantdb.yaml
@@ -1,31 +1,37 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{.Chart.Name}}-create-cloudantdb-{{.Release.Name}}"
+  name: "{{.Chart.Name}}-bind-cloudantdb-{{.Release.Name}}"
   labels:
+    app: bluecompute
+    micro: customer
+    tier: backend
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
-    chart: "{{.Chart.Name}}-{{.Chart.Version}}"
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
   annotations:
     # This is what defines this resource as a hook. Without this line, the
     # job is considered part of the release.
     "helm.sh/hook": pre-install
-    "helm.sh/hook-weight": "33"
+    "helm.sh/hook-weight": "34"
 spec:
   template:
     metadata:
-      name: "{{.Chart.Name}}-create-cloudantdb-{{.Release.Name}}"
+      name: "{{.Chart.Name}}-bind-cloudantdb-{{.Release.Name}}"
       labels:
+        app: bluecompute
+        micro: customer
+        tier: backend
         heritage: {{.Release.Service | quote }}
         release: {{.Release.Name | quote }}
-        chart: "{{.Chart.Name}}-{{.Chart.Version}}"
+        chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     spec:
       restartPolicy: Never
       containers:
       - name: create-cloudantdb
-        image: ibmcase/bluemix-deployer
+        image: ibmcase/bluemix-cluster-deployer
         command: [ "/bin/bash", "-c" ]
-        args: ["source /scripts/bx_login.sh; bx service list | grep cloudantNoSQLDB | grep '^{{ .Values.cloudant.serviceName }} ' || bx service create cloudantNoSQLDB {{ .Values.cloudant.servicePlan}} {{ .Values.cloudant.serviceName }}"]
+        args: ["source /scripts/bx_login.sh; bx cs init; bx cs cluster-service-bind ${KUBE_CLUSTER_NAME} default {{ .Values.cloudant.serviceName }}"]
         imagePullPolicy: IfNotPresent
         env:
         - name: BX_SPACE
