--- a/chart/customer-ce/charts/customer-couchdb/templates/service.yaml
+++ b/chart/customer-ce/charts/customer-couchdb/templates/service.yaml
@@ -1,25 +1,23 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: customer-service
+  name: {{ .Values.couchdb.service.name }}
   labels:
     app: bluecompute
     micro: customer
-    tier: backend
-    heritage: {{.Release.Service | quote }}
+    tier: data
     release: {{.Release.Name | quote }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ .Values.couchdb.service.type }}
   ports:
-  - port: {{ .Values.service.externalPort }}
-    targetPort: {{ .Values.service.internalPort }}
+  - port: {{ .Values.couchdb.service.externalPort }}
+    targetPort: {{ .Values.couchdb.service.internalPort }}
     protocol: TCP
-    name: {{ .Values.service.name }}
+    name: {{ .Values.couchdb.service.name }}
   selector:
     app: bluecompute
     micro: customer
-    tier: backend
-    heritage: {{.Release.Service | quote }}
+    tier: data
     release: {{.Release.Name | quote }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
