--- a/chart/customer/templates/pre_e_bind_cloudantdb.yaml
+++ b/chart/customer/templates/pre_e_bind_cloudantdb.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{.Chart.Name}}-bind-cloudantdb-{{.Release.Name}}"
+  name: "{{.Chart.Name}}-bind-cloudantdb-{{.Release.Name}}-{{ randAlphaNum 5 | lower }}"
   labels:
     app: bluecompute
     micro: customer
@@ -17,7 +17,7 @@ metadata:
 spec:
   template:
     metadata:
-      name: "{{.Chart.Name}}-bind-cloudantdb-{{.Release.Name}}"
+      name: "{{.Chart.Name}}-bind-cloudantdb-{{.Release.Name}}-{{ randAlphaNum 5 | lower }}"
       labels:
         app: bluecompute
         micro: customer
