--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -7,6 +7,8 @@ image:
   repository: ibmcase/bluecompute-customer
   tag: latest
   pullPolicy: IfNotPresent
+  usePullSecret: false
+  pullSecretName: registry-token
 
 service:
   name: customer-service
