use image pull secret

--- a/chart/bluecompute-customer/templates/create_image_pull_secret.yaml
+++ b/chart/bluecompute-customer/templates/create_image_pull_secret.yaml
@@ -27,21 +27,19 @@ spec:
       - name: create-image-pull-secret
         image: ibmcase/kubectl:latest
         command: [ "/bin/bash", "-c" ]
-        {{- if eq .Values.image.pullSecret "" -}}
-        # TODO: manage secrets per image?
+        imagePullPolicy: IfNotPresent
+        {{- if .Values.image.pullSecret }}
         args: 
         - >
-            set -x
+            set -x;
             registry_name=`echo {{ .Values.image.repository }} | cut -d/ -f1`;
-            echo "{\"${registry_name}\":{\"auth\":\"{{ .Values.image.pullSecret }}\"}}" > /tmp/dockerconfigjson;
-            kubectl create secret {{ .Values.image.pullSecretName }} \
-              --from-file=.dockecfg=/tmp/dockerconfigjson \
-              --type=kubernetes.io/dockercfg  \
-              --namespace {{ .Release.Namespace }}
-        {{- else -}}
-        args: ["exit 0"]
-        {{- end --}
-        imagePullPolicy: IfNotPresent
-        env:
-        - name: BLUEMIX_API_KEY
-          value: {{ .Values.secret.apiKey }}
+            token=`echo -n "token:{{ .Values.image.pullSecret }}" | base64 | xargs -n1 echo -n`;
+            echo "{\"${registry_name}\":{\"auth\":\"${token}\"}}" > /tmp/dockerconfigjson;
+            cat /tmp/dockerconfigjson;
+            kubectl create secret generic {{ .Values.image.pullSecretName }} --from-file=.dockercfg=/tmp/dockerconfigjson --type=kubernetes.io/dockercfg --namespace {{ .Release.Namespace }}
+
+        {{- else}}
+        args: 
+        - >
+            exit 0
+        {{- end}}
