randomize job name

--- a/chart/bluecompute-customer/templates/create_image_pull_secret.yaml
+++ b/chart/bluecompute-customer/templates/create_image_pull_secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{.Chart.Name}}-create-image-pull-secret-{{.Release.Name}}"
+  name: "{{.Chart.Name}}-create-image-pull-secret-{{.Release.Name}}-{{ randAlphaNum 5 | lower }}"
   labels:
     app: bluecompute
     heritage: {{.Release.Service | quote }}
@@ -29,13 +29,14 @@ spec:
         command: [ "/bin/bash", "-c" ]
         imagePullPolicy: IfNotPresent
         {{- if .Values.image.pullSecret }}
+        # TODO: secret management per image ??
         args: 
         - >
             set -x;
             registry_name=`echo {{ .Values.image.repository }} | cut -d/ -f1`;
             token=`echo -n "token:{{ .Values.image.pullSecret }}" | base64 | xargs -n1 echo -n`;
             echo "{\"${registry_name}\":{\"auth\":\"${token}\"}}" > /tmp/dockerconfigjson;
-            cat /tmp/dockerconfigjson;
+            kubectl get secret {{ .Values.image.pullSecretName }} && kubectl delete secret {{ .Values.image.pullSecretName }};
             kubectl create secret generic {{ .Values.image.pullSecretName }} --from-file=.dockercfg=/tmp/dockerconfigjson --type=kubernetes.io/dockercfg --namespace {{ .Release.Namespace }}
 
         {{- else}}
