--- a/chart/ibmcase-couchdb/templates/service.yaml
+++ b/chart/ibmcase-couchdb/templates/service.yaml
@@ -1,19 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.couchdb.service.name }}
+  name: {{ .Values.service.name }}
   labels:
-{{ toYaml .Values.couchdb.labels | indent 4 }}
+{{ toYaml .Values.labels | indent 4 }}
     release: {{.Release.Name | quote }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
-  type: {{ .Values.couchdb.service.type }}
+  type: {{ .Values.service.type }}
   ports:
-  - port: {{ .Values.couchdb.service.externalPort }}
-    targetPort: {{ .Values.couchdb.service.internalPort }}
+  - port: {{ .Values.service.externalPort }}
+    targetPort: {{ .Values.service.internalPort }}
     protocol: TCP
-    name: {{ .Values.couchdb.service.name }}
+    name: {{ .Values.service.name }}
   selector:
-{{ toYaml .Values.couchdb.labels | indent 4 }}
+{{ toYaml .Values.labels | indent 4 }}
     release: {{.Release.Name | quote }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
