ibmcase-couchdb chart update

--- a/chart/customer-ce/templates/deployment.yaml
+++ b/chart/customer-ce/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: bluecompute-customer
+  name: {{ .Release.Name }}-{{ .Chart.Name }}
   labels:
     app: bluecompute
     micro: customer
@@ -39,7 +39,7 @@ spec:
         ]'
     spec:
       containers:
-      - name: bluecompute-customer
+      - name: {{ .Release.Name }}-{{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         volumeMounts:
