--- a/chart/ibmcase-couchdb/templates/deployment.yaml
+++ b/chart/ibmcase-couchdb/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ .Chart.Name }}-couchdb
+  name: {{ .Release.Name }}-{{ .Values.nodename }}-couchdb
   labels:
 {{ toYaml .Values.labels | indent 4 }}
     release: {{.Release.Name | quote }}
@@ -20,6 +20,8 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
+          - name: NODENAME
+            value: {{ .Values.nodename }}
           - name: COUCHDB_USER
             valueFrom:
               secretKeyRef:
@@ -56,5 +58,5 @@ spec:
             claimName: {{ .Values.existingPVCName }}
 {{ else }}
           hostPath:
-            path: /opt/couchdb/data
+            path: /opt/couchdb-{{ .Release.Name }}/data
 {{ end }}            
