ibmcase-couchdb chart update

--- a/chart/customer-ce/values.yaml
+++ b/chart/customer-ce/values.yaml
@@ -25,6 +25,11 @@ resources:
   requests:
     memory: 64Mi
 
+useBluemix: false
+
+ibmcase-bluemix-service:
+
+
 ibmcase-couchdb:
   user:
   password:
