--- a/chart/ibmcase-bluemix-service/templates/create_api_key_secret.yaml
+++ b/chart/ibmcase-bluemix-service/templates/create_api_key_secret.yaml
@@ -1,22 +1,24 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{.Release.Name}}-create-api-key-secret-{{ randAlphaNum 5 | lower }}"
+  name: {{.Release.Name}}-create-api-key-secret-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-{{ randAlphaNum 5 | lower }}
   namespace: {{ .Release.Namespace }}
   labels:
+    bluemixService: {{ .Values.bluemix.service.name | lower | replace " " "-" }}
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
   annotations:
     # This is what defines this resource as a hook. Without this line, the
     # job is considered part of the release.
-    "helm.sh/hook": pre-install
+    "helm.sh/hook": pre-install,post-delete
     "helm.sh/hook-weight": "1"
 spec:
   template:
     metadata:
-      name: "{{.Release.Name}}-create-api-key-secret-{{ randAlphaNum 5 | lower }}"
+      name: {{.Release.Name}}-create-api-key-secret-{{ .Values.bluemix.service.name | lower | replace " " "-" }}
       labels:
+        bluemixService: {{ .Values.bluemix.service.name | lower | replace " " "-" }}
         heritage: {{.Release.Service | quote }}
         release: {{.Release.Name | quote }}
         chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
@@ -26,8 +28,8 @@ spec:
       - name: create-api-key-secret
         image: ibmcase/kubectl:latest
         command: [ "/bin/bash", "-c" ]
-        args: ["kubectl get secrets {{ .Release.Name }}-bluemix-api-key --namespace {{ .Release.Namespace }} || \
-        kubectl create secret generic {{ .Release.Name }}-bluemix-api-key --from-literal=api-key=${BLUEMIX_API_KEY} \
+        args: ["kubectl get secrets {{ .Release.Name }}-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-bluemix-api-key --namespace {{ .Release.Namespace }} || \
+        kubectl create secret generic {{ .Release.Name }}-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-bluemix-api-key --from-literal=api-key=${BLUEMIX_API_KEY} \
         --namespace {{ .Release.Namespace }}"]
         imagePullPolicy: IfNotPresent
         env:
