--- a/chart/ibmcase-bluemix-service/templates/delete_api_key_secret.yaml
+++ b/chart/ibmcase-bluemix-service/templates/delete_api_key_secret.yaml
@@ -1,30 +1,32 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{.Release.Name}}-delete-api-key-secret-{{ randAlphaNum 5 | lower }}"
+  name: {{.Release.Name}}-delete-api-key-secret-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-{{ randAlphaNum 5 | lower }}
   namespace: {{ .Release.Namespace }}
   labels:
+    bluemixService: {{ .Values.bluemix.service.name | lower | replace " " "-" }}
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
   annotations:
     # This is what defines this resource as a hook. Without this line, the
     # job is considered part of the release.
-    "helm.sh/hook": pre-install
+    "helm.sh/hook": pre-install,post-delete
     "helm.sh/hook-weight": "99"
 spec:
   template:
     metadata:
-      name: "{{.Release.Name}}-delete-api-key-secret-{{ randAlphaNum 5 | lower }}"
+      name: {{.Release.Name}}-delete-api-key-secret-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-{{ randAlphaNum 5 | lower }}
       labels:
+        bluemixService: {{ .Values.bluemix.service.name | lower | replace " " "-" }}
         heritage: {{.Release.Service | quote }}
         release: {{.Release.Name | quote }}
-        chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+        chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     spec:
       restartPolicy: Never
       containers:
       - name: delete-api-key-secret
         image: ibmcase/kubectl:latest
         command: [ "/bin/bash", "-c" ]
-        args: ["kubectl get secrets {{ .Release.Name }}-bluemix-api-key --namespace {{ .Release.Namespace }} && kubectl --namespace {{ .Release.Namespace }} delete secret {{ .Release.Name }}-bluemix-api-key"]
+        args: ["kubectl get secrets {{ .Release.Name }}-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-bluemix-api-key --namespace {{ .Release.Namespace }} && kubectl --namespace {{ .Release.Namespace }} delete secret {{ .Release.Name }}-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-bluemix-api-key"]
         imagePullPolicy: IfNotPresent
