--- a/chart/ibmcase-bluemix-service/templates/unbind_bluemix_service.yaml
+++ b/chart/ibmcase-bluemix-service/templates/unbind_bluemix_service.yaml
@@ -1,37 +1,38 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{.Release.Name}}-create-bluemix-service-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-{{ randAlphaNum 5 | lower }}
+  name: {{.Release.Name }}-unbind-bluemix-service-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-{{ randAlphaNum 5 | lower }}
   namespace: {{ .Release.Namespace }}
   labels:
     bluemixService: {{ .Values.bluemix.service.name | lower | replace " " "-" }}
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
   annotations:
     # This is what defines this resource as a hook. Without this line, the
     # job is considered part of the release.
-    "helm.sh/hook": pre-install
-    "helm.sh/hook-weight": "33"
+    "helm.sh/hook": post-delete
+    "helm.sh/hook-weight": "34"
 spec:
   template:
     metadata:
-      name: {{.Release.Name}}-create-bluemix-service-{{ .Values.bluemix.service.name | lower | replace " " "-" }}
+      name: {{.Release.Name}}-unbind-bluemix-service-{{ .Values.bluemix.service.name | lower | replace " " "-" }}
       labels:
         bluemixService: {{ .Values.bluemix.service.name | lower | replace " " "-" }}
         heritage: {{.Release.Service | quote }}
         release: {{.Release.Name | quote }}
-        chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+        chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     spec:
       restartPolicy: Never
       containers:
-      - name: create-service
-        image: ibmcase/bluemix-deployer
+      - name: bind-service
+        image: ibmcase/bluemix-cluster-deployer
         command: [ "/bin/bash", "-c" ]
         args: 
         - >
           source /scripts/bx_login.sh; 
-          bx service list | grep {{ .type }} | grep '^{{ .name }} ' || bx service create {{ .Values.bluemix.service.type }} {{ .Values.bluemix.service.plan }} {{ .Values.bluemix.service.name }};
+          bx cs init; 
+          bx cs cluster-service-unbind {{ .Values.bluemix.clusterName }} {{ .Release.Namespace }} {{ .Values.bluemix.service.name }}
         imagePullPolicy: IfNotPresent
         env:
         - name: BX_ORG
